--- a/pom.xml
+++ b/pom.xml
@@ -112,14 +112,14 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.19.3-R0.1-SNAPSHOT</version>
+            <version>1.19.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
-            <artifactId>holographicdisplays-api</artifactId>
-            <version>2.4.0</version>
-            <scope>provided</scope>
+           <groupId>me.filoghost.holographicdisplays</groupId>
+           <artifactId>holographicdisplays-api</artifactId>
+           <version>3.0.0</version>
+           <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.xerial</groupId>
@@ -161,6 +161,11 @@
             <artifactId>GuizhanLibPlugin</artifactId>
             <version>1.1.1</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+        	<groupId>com.github.slimefun</groupId>
+        	<artifactId>Slimefun</artifactId>
+        	<version>57344a3-canary</version>
         </dependency>
     </dependencies>
 </project>
