--- a/pom.xml
+++ b/pom.xml
@@ -157,9 +157,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.Slimefun</groupId>
+            <groupId>com.github.StarWishsama</groupId>
             <artifactId>Slimefun4</artifactId>
-            <version>RC-35</version>
+            <version>2024.2</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
