--- a/pom.xml
+++ b/pom.xml
@@ -133,9 +133,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.mooy1</groupId>
+            <groupId>com.github.SlimefunGuguProject</groupId>
             <artifactId>InfinityLib</artifactId>
-            <version>1.3.9</version>
+            <version>1.3.10</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
